--- a/csRenamer/csRenamer.csproj
+++ b/csRenamer/csRenamer.csproj
@@ -6,6 +6,11 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
+    <ApplicationIcon>csRenamer.ico</ApplicationIcon>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Include="csRenamer.ico" />
+  </ItemGroup>
 
 </Project>
