Add Insert/Delete and Manual pages with navigation
Added new navigation cases in `MainWindow.xaml.cs` to support
the `InsertDelete` and `Manual` pages. Updated `csRenamer.csproj`
to include these pages in the build process.

Created `InsertDelete.xaml` and `InsertDelete.xaml.cs` to provide
UI and logic for insertion and deletion operations. The page
includes radio buttons, text boxes, and number boxes for user
input.

Created `Manual.xaml` and `Manual.xaml.cs` to provide UI and
logic for manual renaming functionality. The page includes a
text box for entering a new file name and a description for
guidance.

--- a/csRenamer/csRenamer.csproj
+++ b/csRenamer/csRenamer.csproj
@@ -17,6 +17,8 @@
     <Content Remove="Assets\csRenamer.ico" />
   </ItemGroup>
   <ItemGroup>
+    <None Remove="Pages\InsertDelete.xaml" />
+    <None Remove="Pages\Manual.xaml" />
     <None Remove="Pages\Patterns.xaml" />
     <None Remove="Pages\Substitutions.xaml" />
   </ItemGroup>
@@ -46,6 +48,16 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.26100.7175" />
     <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.8.251106002" />
+  </ItemGroup>
+  <ItemGroup>
+    <Page Update="Pages\Manual.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+  </ItemGroup>
+  <ItemGroup>
+    <Page Update="Pages\InsertDelete.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Page Update="Pages\Substitutions.xaml">
